--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #wilt: "^3.4.0"
+  wilt: "^3.4.1"
+  #path_provider: "^0.4.0"
   cupertino_icons: "^0.1.0"
   json_object: "^1.0.19"
   xml: "^3.0.0"
   cached_network_image: "^0.3.0"
   pubsub: "^1.1.9"
 
-  wilt:
-     path: /Users/cwitte/scratch/wilt
+  #wilt:
+  #   path: /Users/cwitte/scratch/wilt
   #wilt:
   #  git: https://github.com/shamblett/wilt.git
 
