--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   #wilt: "^3.4.1"
   #wilt: any
+  tuple: "^1.0.1"
   mqtt_client: "^1.7.1"
   # mqtt_client: 
   #    path: /Users/cwitte/scratch/mqtt_client
@@ -16,6 +17,9 @@ dependencies:
   path: "^1.5.1"
   #protobuf: ">=0.3.4 <0.4.0"
   #dson: "any"
+  intl: "^0.15.6"
+
+  semaphore: "^0.0.1"
 
   #path_provider: "^0.4.0"
   cupertino_icons: "^0.1.0"
