--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   #wilt: "^3.4.1"
   #wilt: any
   tuple: "^1.0.1"
+  color: "^2.0.2"
   mqtt_client: "^1.7.1"
   # mqtt_client: 
   #    path: /Users/cwitte/scratch/mqtt_client
@@ -20,6 +21,7 @@ dependencies:
   intl: "^0.15.6"
 
   semaphore: "^0.0.1"
+  sqflite: "^0.8.9"
 
   #path_provider: "^0.4.0"
   cupertino_icons: "^0.1.0"
