--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   #wilt: any
   tuple: "^1.0.1"
   color: "^2.0.2"
-  mqtt_client: "^1.7.1"
-  # mqtt_client: 
-  #    path: /Users/cwitte/scratch/mqtt_client
+  #mqtt_client: "^1.7.1"
+  mqtt_client: 
+      path: /Users/cwitte/scratch/mqtt_client
   archive: "^1.0.33"
   path: "^1.5.1"
   #protobuf: ">=0.3.4 <0.4.0"
@@ -59,6 +59,7 @@ flutter:
   assets:
    - images/finish_flag_128.9.png
    - images/finish_flag.png
+   - images/chicago_aasbd.9.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
