thinking of deep login link function. already tweaked manifest.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,14 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <intent-filter android:autoVerify="true" >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- <data android:scheme="derbyraceclient" android:host="login"/> -->
+                <data android:scheme="https" android:host="cf.rr1.us"/>
+                <data android:scheme="http" android:host="cf.rr1.us"/>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
